# cmdpack-rs

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  lib.rs
test/tests/: Cargo.toml  test.py
test/tests/src/: main.rs  proccmd.rs
