[package]
name = "cmdpack"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"
author = ["jeppeter <jeppeter@gmail.com>"]
description = """
Rust Command handle
"""
license = "MIT/Apache-2.0"

repository = "https://github.com/jeppeter/cmdpack-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extlog = "^0.1.4"